# object_detection_for_robotics

./: README.md
tf_object_detection/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
tf_object_detection/config/: config.yaml
tf_object_detection/launch/: test.launch
tf_object_detection/msg/: detection_results.msg  rectangles_results .msg
tf_object_detection/src/: __init__.py  move_group_python_uarmswiftpro.py  object_detection_lib.py  tf_object_detection_node.py
